# code-context-vault-indexer

./: .pre-commit-config.yaml  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260328_0001_create_projects_and_files.py  20260328_0002_add_hybrid_search.py  20260328_0003_add_functions.py  20260329_0004_add_body_to_hybrid_search_functions.py  20260329_0005_add_file_id_filter_to_hybrid_search_files.py  20260329_0006_add_body_to_files.py
docs/: Datamodel.drawio
notebooks/: query_files.ipynb
src/: git.py  llm.py  main.py
src/database/: __init__.py  connection.py
src/files/: __init__.py  enricher.py  indexer.py  models.py
src/functions/: __init__.py  enricher.py  extractor.py  indexer.py  models.py
src/projects/: indexer.py  models.py
